--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 			<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2019-2021</span>
+    					<span class="date">2018-2021</span>
     					<h2>Bachelor of Computer Application</h2>
     					<span class="position">MAKAUT</span>
     					<p class="mt-4">Grade: First class distinction.</p>
@@ -377,7 +377,7 @@
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2016-2017</span>
+    					<span class="date">2015-2016</span>
     					<h2>Higher Secondary School</h2>
     					<span class="position">Pakuriya Chintamony Adarsha Vidyapith</span>
     					<p class="mt-4">Grade: First class distinction.</p>
@@ -411,14 +411,14 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Loan-Approval-Prediction-App</a></h3>
+                <h3 class="heading"><a href="https://github.com/coder-akram-khan/Loan-Approval-Prediction-Web-App">Loan-Approval-Prediction-App</a></h3>
                 <p>A web application for predicting loan approvals, helping banks and financial institutions make data-driven decisions. </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj2.png');">
+              <a href="https://github.com/coder-akram-khan/blinkit-sales-analysis" class="block-20 zoom-effect" style="background-image: url('images/proj2.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -429,7 +429,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj4.png');">
+              <a href="https://github.com/coder-akram-khan/hiv-incidence-dashboard" class="block-20 zoom-effect" style="background-image: url('images/proj4.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -444,7 +444,7 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj3.png');">
+				<a href="https://github.com/coder-akram-khan/Python-Diwali-Sales-Analysis-Insights-Visualizations" class="block-20 zoom-effect" style="background-image: url('images/proj3.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -453,17 +453,7 @@
 				</div>
 			  </div>
 			</div>
-			<!-- <div class="col-md-4 d-flex ftco-animate">
-				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
-				</a>
-				<div class="text mt-3 float-right d-block">
-  
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Customer Segmentation using clustering model</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
-				</div> -->
-			  </div>
-			</div>
+			
 		 </div>
 	  </div>
     </section>
@@ -487,14 +477,7 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="1000">0</strong>
-                <span>Mentored Students</span>
-              </div>
-            </div>
-          </div> -->
+          
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
@@ -513,7 +496,7 @@
 						<h2>More projects on<span> Github  </span> </h2>
 						<div class="heading"> <h4> I love to develop intelligent solutions &amp; decision-making. </h4>
 						<br>
-						<p><a href="that bridge data and decision-making" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/coder-akram-khan" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
