Two projects aded to the project section

--- a/index.html
+++ b/index.html
@@ -437,8 +437,10 @@
                 <p>An interactive dashboard for exploring global HIV incidence data using Streamlit and Plotly. </p>
               </div>
             </div>
+			
           </div>
         </div>
+
 	<br>
 		<!-- added justify-content-center to center align the last two projects -->
 		<div class="row d-flex justify-content-center">  
@@ -450,6 +452,28 @@
   
 				  <h3 class="heading"><a href="https://github.com/coder-akram-khan/Python-Diwali-Sales-Analysis-Insights-Visualizations">Python-Diwali-Sales-Analysis</a></h3>
 				  <p>This project analyzes Diwali sales data using Python to uncover insights on buyer demographics, , state-wise trends, and top-performing product categories.</p>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4 d-flex ftco-animate">
+				<div class="blog-entry justify-content-end">
+				<a href="https://businessanalyticsdashboard.streamlit.app/" class="block-20 zoom-effect" style="background-image: url('images/proj5.png');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+  
+				  <h3 class="heading"><a href="https://github.com/coder-akram-khan/Business_Analytics_Dashboard">Business Analytics Dashboard</a></h3>
+				  <p>The Business Analytics Dashboard is a Streamlit application designed to visualize and analyze employee data.</p>
+				</div>
+			  </div>
+			</div>
+			<div class="col-md-4 d-flex ftco-animate">
+				<div class="blog-entry justify-content-end">
+				<a href="https://zomato-eda-dashboard.streamlit.app/" class="block-20 zoom-effect" style="background-image: url('images/proj6.png');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+  
+				  <h3 class="heading"><a href="https://github.com/coder-akram-khan/Zomato-EDA-Dashboard">Zomato EDA Dashboard 🍴</a></h3>
+				  <p>An interactive dashboard for exploratory data analysis (EDA) of Zomato restaurant data. The dashboard allows users to filter data, view insights.</p>
 				</div>
 			  </div>
 			</div>
