New components added

--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@
 	    </div>
 	  </nav>
 	  <section id="home-section" class="hero">
-		  <div class="home-slider  owl-carousel">
-	       <div class="slider-item ">
-	      	<div class="overlay"></div>
-	         <div class="container">
-	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/ml.gif);">
-	          	 <div class="overlay"></div>
-	          	</div>
-		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-		          	<div class="text">
+		<div class="home-slider  owl-carousel">
+		 <div class="slider-item ">
+			<div class="overlay"></div>
+		   <div class="container">
+			<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+				<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/ml.gif);">
+				 <div class="overlay"></div>
+				</div>
+				<div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+					<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Akram Khan</span></h1>
 
@@ -322,6 +322,22 @@
 		<br>
 		
 		<div class="row">
+			<div class="col-md-6">
+				<div class="resume-wrap ftco-animate">
+					<span class="date">2025-PRESENT</span>
+					<h2>Data Analyst and ML Egineer</h2>
+					<span class="position">Workerssal</span>
+					<p class="mt-4">Workerssal is a global freelancing network of 200+ professionals and 15 in-house experts, delivering innovative, tailored solutions across industries to empower businesses.
+						<ul>
+							<li>Built AI email automation (GPT-3.5/Twilio) for Gmail/Outlook/Yahoo with CRM integration.</li>
+							<li>Automated bulk email campaigns via Python CLI using Excel/HTML templates.</li>
+							<li>Designed AI-regex web scraper (Selenium) for lead generation and validation.</li>
+							<li>Streamlined workflows by deploying tools for 200+ freelancers, reducing manual tasks by 30%.</li>
+						</ul>
+					</p>
+				</div>
+
+			</div>
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2022-2023</span>
@@ -338,7 +354,7 @@
 
 				</div>
 
-				<div class="col-md-6">
+				<!-- <div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2021-2022</span>
 						<h2>Junior DB Engineer</h2>
@@ -353,7 +369,7 @@
 						</p>
 					</div>
 
-				</div>
+				</div> -->
 			</div>
 
 		<br>
@@ -429,12 +445,12 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/coder-akram-khan/hiv-incidence-dashboard" class="block-20 zoom-effect" style="background-image: url('images/proj4.png');">
+              <a href="https://github.com/coder-akram-khan/Tableau-Customer-Analysis-Dashboard" class="block-20 zoom-effect" style="background-image: url('images/proj4.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/coder-akram-khan/hiv-incidence-dashboard">Hiv-Incidence-Dashboard</a></h3>
-                <p>An interactive dashboard for exploring global HIV incidence data using Streamlit and Plotly. </p>
+                <h3 class="heading"><a href="https://github.com/coder-akram-khan/Tableau-Customer-Analysis-Dashboard">Tableau Customer Analysis Dashboard</a></h3>
+                <p>The Customer Analysis Dashboard is a Tableau-based analytics project designed to provide insights into customer purchasing behavior. </p>
               </div>
             </div>
 			
@@ -593,7 +609,7 @@
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/mr-akram-khan/"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://x.com/coderakram"><span class="icon-twitter"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.facebook.com/coderakramkhan"><span class="icon-facebook"></span></a></li>
-				      <li class="ftco-animate"><a href="https://www.instagram.com/i.mr.akram/"><span class="icon-instagram"></span></a></li>
+					      <li class="ftco-animate"><a href="https://www.instagram.com/i.mr.akram/"><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
 		   </div>
